--- a/gestion-mercado/src/app/styles/tabla-style.scss
+++ b/gestion-mercado/src/app/styles/tabla-style.scss
@@ -213,6 +213,26 @@ input[type="text"]:focus {
   box-shadow: 0 2px 4px rgba(255, 179, 217, 0.4);
 }
 
+.btnEliminar:disabled,
+.btnEditar:disabled {
+  background: #cccccc;
+  color: #888888;
+  cursor: not-allowed;
+  opacity: 0.6;
+  transform: none;
+  box-shadow: none;
+}
+
+.btnEliminar:disabled:hover,
+.btnEditar:disabled:hover,
+.btnEliminar:disabled:focus,
+.btnEditar:disabled:focus {
+  background: #cccccc;
+  transform: none;
+  box-shadow: none;
+}
+
+
 /* Responsive */
 @media screen and (max-width: 1200px) {
   .celda-acciones,
