mini correcciones ortográficas
en inputs de los forms inválidos

--- a/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.html
+++ b/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.html
@@ -22,7 +22,7 @@
       <label> Edad: </label>
         <input type="number" formControlName="edad">
         @if (form.get('edad')?.invalid && form.get('edad')?.touched) {
-          <span class="error">La persona debe tener entre 18 y 120 años.</span>
+          <span class="error">El Dueño debe tener entre 18 y 120 años.</span>
         }
       </div>
     <div class = "campo">
