--- a/gestion-mercado/src/app/pages/product-pages/product-form/product-form.html
+++ b/gestion-mercado/src/app/pages/product-pages/product-form/product-form.html
@@ -21,7 +21,7 @@
         <label> Url imagen del producto: </label>
         <input type="url" formControlName="url">
         @if (form.get('url')?.invalid && form.get('url')?.touched) {
-          <span class = "error">La url del producto debe ser valida.</span>
+          <span class = "error">La url del producto debe ser válida.</span>
         }
       </div>
 
