--- a/gestion-mercado/src/app/pages/cliente-pages/cliente-form/cliente-form.html
+++ b/gestion-mercado/src/app/pages/cliente-pages/cliente-form/cliente-form.html
@@ -7,14 +7,14 @@
         <label>Nombre: </label>
         <input type="text" formControlName="nombre">
         @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
-          <span class = "error">El campo no puede estar vacio ni contener caracteres no alfabeticos.</span>
+          <span class = "error">El campo no puede estar vacío ni contener caracteres no alfabéticos.</span>
         }
       </div>
       <div class = "campo">
         <label>Dni: </label>
         <input type="number" formControlName="dni">
         @if (form.get('dni')?.invalid && form.get('dni')?.touched) {
-          <span class = "error">El DNI debe tener enter 6 y 9 digitos</span>
+          <span class = "error">El DNI debe tener entre 6 y 9 dígitos</span>
         }
       </div>
       <div class = "campo">
