--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -22,7 +22,7 @@
         <a routerLink="/menu/duenios"> <div class="recuadro"></div>
         <div class="icon-container">
           <img class="icon" src="/assets/images/duenio-icon.png" alt="duenio-icon" />
-          <p> DUENIOS </p>
+          <p> DUEÑOS </p>
         </div>
         </a>
       </li>
@@ -59,7 +59,7 @@
         <a routerLink="/menu/proveedores"> <div class="recuadro"></div>
         <div class="icon-container">
           <img class="icon" src="/assets/images/proveedor-icon.png" alt="duenio-icon" />
-          <p> Proveedores </p>
+          <p> PROVEEDORES </p>
         </div>
          </a>
       </li>}
