--- a/gestion-mercado/src/app/components/breadcrumb.component/breadcrumb.component.css
+++ b/gestion-mercado/src/app/components/breadcrumb.component/breadcrumb.component.css
@@ -3,8 +3,6 @@
   align-items: center;
   gap: 0.5rem;
   padding: 0.5rem 1.25rem;
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(6px);
   margin: 0;
 }
 
@@ -31,7 +29,7 @@
 }
 
 .breadcrumbs a::after {
-  content: " / ";
+  content: " > ";
   color: var(--rosa);
   font-weight: 400;
   opacity: 0.7;
@@ -43,7 +41,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  .breadcrumbs {
+    padding: 0.2rem 1.25rem;
+  }
+
   .breadcrumbs a {
-    font-size: 1rem;
+    font-size: 3.3dvw;
   }
 }
