--- a/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
+++ b/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
@@ -15,30 +15,32 @@
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
 
-  <table class="tabla">
-    <thead class="encabezado">
-      <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Edad</th>
-        <th>DNI</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
+  <div class="tabla-contenedor">
+    <table class="tabla">
+      <thead class="encabezado">
+        <tr>
+          <th>ID</th>
+          <th>Nombre</th>
+          <th>Edad</th>
+          <th>DNI</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
 
-    <tbody class="tablaBody">
-      @for (persona of personasFiltradas(); track $index){
-      <tr>
-        <td>{{ persona.personaId }}</td>
-        <td>{{ persona.nombre }}</td>
-        <td>{{ persona.edad }}</td>
-        <td>{{ persona.dni }}</td>
-        <td class="botones">
-          <button class="btnEliminar" (click)="deletePersona(persona.personaId)">Eliminar</button>
-          <button class="btnEditar" (click)="updatePersona(persona)">Editar</button>
-        </td>
-      </tr>
-      }
-    </tbody>
-  </table>
+      <tbody class="tablaBody">
+        @for (persona of personasFiltradas(); track $index){
+        <tr>
+          <td>{{ persona.personaId }}</td>
+          <td>{{ persona.nombre }}</td>
+          <td>{{ persona.edad }}</td>
+          <td>{{ persona.dni }}</td>
+          <td class="acciones">
+            <button class="btnEliminar" (click)="deletePersona(persona.personaId)">Eliminar</button>
+            <button class="btnEditar" (click)="updatePersona(persona)">Editar</button>
+          </td>
+        </tr>
+        }
+      </tbody>
+    </table>
+  </div>
 </section>
