aviso de "sin registros" en tablas
y otras cositas

--- a/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
+++ b/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
@@ -39,6 +39,12 @@
             <button class="btnEditar" type="button" (click)="updateCuentaBancaria(c)">Editar</button>
           </td>
         </tr>
+      } @empty {
+        <tr>
+          <td colspan="4" class="sin-registros">
+            No se encontraron registros
+          </td>
+        </tr>
       }
     </tbody>
   </table>
