--- a/gestion-mercado/src/app/pages/duenios-pages/duenios-list/duenios-list.html
+++ b/gestion-mercado/src/app/pages/duenios-pages/duenios-list/duenios-list.html
@@ -46,9 +46,14 @@
               <button class="btnEliminar" (click)="eliminarDuenio(duenio.duenioId)"> Eliminar </button>
               <button class="btnEditar" (click)="modificarDuenio(duenio)"> Editar </button>
             </td>
-
           </tr>
-        }
+      } @empty {
+        <tr>
+          <td colspan="4" class="sin-registros">
+            No se encontraron registros
+          </td>
+        </tr>
+      }
       </tbody>
     </table>
   </div>
