--- a/gestion-mercado/src/app/pages/empleado-pages/empleado-list/empleado-list.html
+++ b/gestion-mercado/src/app/pages/empleado-pages/empleado-list/empleado-list.html
@@ -48,6 +48,12 @@
           <button class="btnEditar" (click)="modificarEmpleado(empleado)">Editar</button>
         </td>
       </tr>
+      } @empty {
+        <tr>
+          <td colspan="4" class="sin-registros">
+            No se encontraron registros
+          </td>
+        </tr>
       }
     </tbody>
   </table>
