--- a/gestion-mercado/src/app/pages/lote-pages/lotes-list/lotes-list.html
+++ b/gestion-mercado/src/app/pages/lote-pages/lotes-list/lotes-list.html
@@ -53,6 +53,12 @@
             <button class="btnEditar" type="button" (click)="updateLote(lote)">Editar</button>
           </td>
         </tr>
+      } @empty {
+        <tr>
+          <td colspan="4" class="sin-registros">
+            No se encontraron registros
+          </td>
+        </tr>
       }
     </tbody>
   </table>
