--- a/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
+++ b/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
@@ -39,7 +39,13 @@
             <button class="btnEditar" (click)="updatePersona(persona)">Editar</button>
           </td>
         </tr>
-        }
+      } @empty {
+        <tr>
+          <td colspan="4" class="sin-registros">
+            No se encontraron registros
+          </td>
+        </tr>
+      }
       </tbody>
     </table>
   </div>
