--- a/gestion-mercado/src/app/pages/cliente-pages/cliente-list/cliente-list.html
+++ b/gestion-mercado/src/app/pages/cliente-pages/cliente-list/cliente-list.html
@@ -43,6 +43,12 @@
           <button class="btnEditar" (click)="modificarCliente(cliente)">Editar</button>
         </td>
       </tr>
+      } @empty {
+        <tr>
+          <td colspan="4" class="sin-registros">
+            No se encontraron registros
+          </td>
+        </tr>
       }
     </tbody>
   </table>
