--- a/gestion-mercado/src/app/styles/tabla-style.scss
+++ b/gestion-mercado/src/app/styles/tabla-style.scss
@@ -197,6 +197,15 @@ input[type="text"]:focus {
   box-shadow: 0 2px 4px rgba(224, 169, 213, 0.4);
 }
 
+.tabla .sin-registros {
+  padding: 1rem;
+  padding-left: 4rem;
+  font-style: italic;
+  font-size: 2rem;
+  color: var(--color5);
+  letter-spacing: 2px;
+}
+
 /* =========================================
   DISEÑO RESPONSIVE
 ========================================= */
