--- a/gestion-mercado/src/app/pages/transacciones-pages/transacciones-list/transacciones-list.css
+++ b/gestion-mercado/src/app/pages/transacciones-pages/transacciones-list/transacciones-list.css
@@ -1,1 +1,11 @@
 @import '../../../styles/tabla-style.scss';
+
+
+.tablaBody tr.entrada {
+  background-color: #cafdd9 !important; /* verde */
+}
+
+
+.tablaBody tr.salida {
+  background-color: #fa7272 !important; /* rojo */
+}
