--- a/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
+++ b/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
@@ -2,6 +2,7 @@
   <h2>PRODUCTOS</h2>
 
   <div class="filter-search-container">
+  <div class="filters-group">
     <select (change)="atributo.set($any($event.target).value)">
       <option value="producto_id" selected>Producto ID</option>
       <option value="nombre">Nombre</option>
@@ -16,8 +17,9 @@
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
   </div>
 
-  <div class="botones">
-    <button type="button" class="btnAgregar" routerLink="/menu/productos/form">Agregar</button>
+  <button type="button" class="btnAgregar" routerLink="/menu/productos/form">
+    Agregar
+  </button>
   </div>
 
   <ul>
