--- a/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.html
+++ b/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.html
@@ -21,7 +21,7 @@
     @if (pedido.tipo === 'COMPRA') {
       <div class="campo">
         <label for="costoUnitarioCompra">Costo Unitario:</label>
-        <input type="number" id="costoUnitarioCompra" [(ngModel)]="nuevoDetalle.costoUnitarioCompra" name="costoUnitarioCompra">
+        <input type="number" id="costoUnitarioCompra" [(ngModel)]="nuevoDetalle.costoUnitario" name="costoUnitarioCompra">
       </div>
     }
 
@@ -66,7 +66,7 @@
             <td>{{ detalle.producto_id }}</td>
             <td>{{ detalle.producto_nombre }}</td>
             <td>{{ detalle.cantidad }}</td>
-            <td>${{ detalle.costoUnitarioCompra }}</td>
+            <td>${{ detalle.costoUnitario }}</td>
             <td>{{ detalle.subtotal }}</td>
             <td class="botones">
               <button
