TODAVIA no me mate
cambiamos el css y el html para que solo monto tenga color  , ya no aguanto mas

--- a/gestion-mercado/src/app/pages/transacciones-pages/transacciones-list/transacciones-list.css
+++ b/gestion-mercado/src/app/pages/transacciones-pages/transacciones-list/transacciones-list.css
@@ -1,11 +1,12 @@
 @import '../../../styles/tabla-style.scss';
 
 
-.tablaBody tr.entrada {
-  background-color: #cafdd9 !important; /* verde */
+.tablaBody td.monto-entrada {
+  color: #0f9d58;
+  font-weight: bold;
 }
 
-
-.tablaBody tr.salida {
-  background-color: #fa7272 !important; /* rojo */
+.tablaBody td.monto-salida {
+  color: #d93025;
+  font-weight: bold;
 }
