--- a/gestion-mercado/src/app/pages/transacciones-pages/transacciones-list/transacciones-list.html
+++ b/gestion-mercado/src/app/pages/transacciones-pages/transacciones-list/transacciones-list.html
@@ -34,20 +34,22 @@
 
     <tbody class="tablaBody">
       @for (transaccion of transaccionesFiltrados(); track $index){
-        <tr [class.entrada]="esEntrada(transaccion)" [class.salida]="!esEntrada(transaccion)">
-          <td>{{ transaccion.transaccion_id }}</td>
-          <td>{{ transaccion.tipo }}</td>
-          <td>{{ transaccion.origen_id }}</td>
-          <td>{{ transaccion.destino_id }}</td>
-          <td>{{ transaccion.monto }}</td>
-          <td>{{ transaccion.fecha }}</td>
-        </tr>
+      <tr [class.entrada]="esEntrada(transaccion)" [class.salida]="!esEntrada(transaccion)">
+        <td>{{ transaccion.transaccion_id }}</td>
+        <td>{{ transaccion.tipo }}</td>
+        <td>{{ transaccion.origen_id }}</td>
+        <td>{{ transaccion.destino_id }}</td>
+        <td [class.monto-entrada]="esEntrada(transaccion)" [class.monto-salida]="!esEntrada(transaccion)">
+          {{ !esEntrada(transaccion) ? ('-' + transaccion.monto) : transaccion.monto }}
+        </td>
+        <td>{{ transaccion.fecha }}</td>
+      </tr>
       } @empty {
-        <tr>
-          <td colspan="4" class="sin-registros">
-            No se encontraron registros
-          </td>
-        </tr>
+      <tr>
+        <td colspan="4" class="sin-registros">
+          No se encontraron registros
+        </td>
+      </tr>
       }
     </tbody>
   </table>
